First try for solution with shared_ptr and c++11

--- a/IKAlgorithms/CMakeLists.txt
+++ b/IKAlgorithms/CMakeLists.txt
@@ -1,15 +1,25 @@
 PROJECT(IKAlgorithms)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
+if(COMPILER_SUPPORTS_CXX11)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+elseif(COMPILER_SUPPORTS_CXX0X)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+else()
+    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+endif()
 
+SET(CMAKE_BUILD_TYPE Debug)
 SET(CMAKE_MODULE_PATH ${IKAlgorithms_SRCS})
 SET(BTK_DIR ~/BTKCore/build)
-SET(IK_DIR ~/ik/build/ik)
+SET(EIGEN2_DIR ~/eigen-git-mirror)
 
 FIND_PACKAGE(BTK REQUIRED)
-FIND_PACKAGE(IK REQUIRED)
 INCLUDE(${BTK_USE_FILE})
-INCLUDE_DIRECTORIES(~/ik/ik/include/public/ik)
+INCLUDE_DIRECTORIES(${EIGEN2_DIR}/Eigen/src)
 
-SET(IKAlgorithms_SRCS main.cpp)
+SET(IKAlgorithms_SRCS main.cpp FabrikSolve.cpp FabrikSolve.h)
 ADD_EXECUTABLE(IKAlgorithms ${IKAlgorithms_SRCS})
-TARGET_LINK_LIBRARIES(IKAlgorithms BTKIO ik)
+TARGET_LINK_LIBRARIES(IKAlgorithms BTKIO)
